# study_kmms_2024

./: .gitignore  README.md  build.sh  run_tests.sh
projects/: CMakeLists.txt
projects/base_theory_p1/: run_base_theory_p1.sh
projects/base_theory_tasks_p1/: run_base_theory_tasks_p1.sh
projects/bubble_sort/: run_bubble_sort.sh
projects/bubble_sort_mf/: run_bubble_sort_mf.sh
projects/obuchaika/: run_obuchaika.sh
projects/quick_sort/: CMakeLists.txt  main.cpp  quick_sort.cpp  run_quick_sort.sh
projects/refactoring_and_print/: run_refactoring_and_print.sh
projects/scl/src/: CMakeLists.txt
projects/scl/src/list/: doubly_linked_list.cpp  doubly_linked_list.hpp
projects/scl/src/long_number/: CMakeLists.txt  long_number.cpp  long_number.hpp
projects/scl/src/vector/: vector.cpp  vector.hpp
projects/scl/test/: CMakeLists.txt
projects/scl/test/doubly_linked_list/: CmakeLists.txt  run_doubly_linked_list_test.sh  templates.cpp  test_doubly_linked_list.cpp
projects/scl/test/long_number/: test_long_number.cpp
projects/scl/test/vector/: CmakeLists.txt  templates.cpp  test_vector.cpp
projects/unit_test_quick/: CMakeLists.txt
projects/unit_test_quick/src/: CMakeLists.txt  quick_sort.hpp
projects/unit_test_quick/test/: CMakeLists.txt  test_quick.cpp
